--- a/activity02-ggplot2-intro.Rmd
+++ b/activity02-ggplot2-intro.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Activity 2"
-author: "Name"
+author: "Lucas Smielewski"
 output: github_document
 ---
 
@@ -114,13 +114,13 @@ For this boxplot, we want to double-encode the variable `species` to not only th
 In the code chunk below, add the missing code (i.e., replacing the `___`) to have our comparative boxplots also include some coloring.
 
 ```{r boxplot-colors}
-ggplot(data = penguins, mapping = aes(x = flipper_length_mm, y = species, ___ = ___)) +
+ggplot(data = penguins, mapping = aes(x = flipper_length_mm, y = species, color = species)) +
   geom_boxplot()
 ```
 
 Now, comment on what you notice from these boxplots.
 
-**Response**:
+**Response**: Adding the colo option in aes adds outlines each boxplot with a color representing the specified class in this case species. 
 
 
 Another way to visualize distributions are with points.
@@ -129,16 +129,15 @@ We can create something similar with jitterplots using `geom_jitter`.
 In the code chunk below, complete it so that it produces a jitterplot.
 
 ```{r jitterplot}
-ggplot(data = penguins, mapping = aes(x = flipper_length_mm, y = species, ___ = ___)) +
-  ___()
+ggplot(data = penguins, mapping = aes(x = flipper_length_mm, y = species, color = species)) +
+  geom_jitter()
 ```
 
 Comment on the strengths of the boxplot compared to the jitterplot and vice versa.
 That is, what can you easily determine by looking at the boxplot?
 What about the jitterplot?
 
-**Response**:
-
+**Response**: You can easily see the 5-number summary (min, Q1, median, Q3, max) when creating a boxplot. The jitterplot shows the individual observations. 
 
 Knit, then stage everything listed in your **Git** pane, commit (with a meaningful commit message), and push  to your GitHub repo.
 Then, go to GitHub and compare/contrast your `activity02-ggplot2-intro.Rmd` and `activity02-ggplot2-intro.md` files.
