--- a/activity02-ggplot2-intro.Rmd
+++ b/activity02-ggplot2-intro.Rmd
@@ -154,17 +154,17 @@ Try doing the following in the code chunk below with my *hint*:
 - Re-create the boxplot with color that you did above, then
 - *Add* another geometry layer for the jitterplot.
 
-```{r box-jitter-combined}
+```{r box-jitter-combined-1}
 ggplot(data = penguins, mapping = aes(x = flipper_length_mm, y=species, fill = species)) +
   geom_boxplot() +
   geom_jitter()
 ```
-```{r box-jitter-combined}
+```{r box-jitter-combined-2}
 ggplot(data = penguins) +
   geom_boxplot(mapping = aes(x = flipper_length_mm, y=species, color = species)) +
   geom_jitter(mapping = aes(x = flipper_length_mm, y=species, color = species))
 ```
-```{r box-jitter-combined}
+```{r box-jitter-combined-3}
 ggplot(data = penguins) +
   geom_jitter(mapping = aes(x = flipper_length_mm, y=species, color = species)) +
   geom_boxplot(mapping = aes(x = flipper_length_mm, y=species, color = species))
@@ -186,6 +186,7 @@ We are not quite ready to create this plot, but we will get there later this sem
 Suppose that you wanted to only color the points in your combined plot, but not the individual boxplots - you want the boxplots to be the default white coloring.
 In the code chunk below, explore different methods to try to create this plot.
 A hint, all `geom_*` have a `mapping` argument.
+
 
 ```{r jitter-colored-only}
 ggplot(data = penguins) +
